--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
